# AICultureKit

./: .aiculture_bypass  .dockerignore  .env.example  .flake8  .gitignore  .gitmessage  .piiignore  .pre-commit-config.yaml  .quality_history.db  .ruffignore  .secrets.baseline  AI_ASSISTANT_GUIDELINES.md  AI_CULTURE_DEMO_REPORT.md  AI_GUIDE.md  AUTOMATION_GUIDE.md  CHANGELOG.md  CI_PROGRESSIVE_HARDENING_REPORT.md  COMPREHENSIVE_CULTURE_ENHANCEMENT_SUMMARY.md  COMPREHENSIVE_TESTING_REPORT.md  CONTRIBUTING.md  CRITICAL_ISSUES_ANALYSIS.md  DATA_PRIVACY_GUIDE.md  DEEP_CULTURE_AUDIT_REPORT.md  DEPENDENCY_MANAGEMENT.md  DEVELOPMENT_BEST_PRACTICES.md  DOCKER.md  Dockerfile  ENVIRONMENT_MANAGEMENT_GUIDE.md  EXCELLENCE_SPRINT_REPORT.md  FINAL_DEEP_APPLICATION_REPORT.md  GRADUAL_QUALITY_IMPROVEMENT_PLAN.md  IMPROVEMENT_SUMMARY.md  INFRASTRUCTURE_INTEGRATION_SUMMARY.md  ISSUE_EXAMPLE.md  LICENSE  MIDTERM_OPTIMIZATION_REPORT.md  OPTIMIZATION_REPORT.md  OPTIMIZATION_RESULTS_REPORT.md  PROJECT_COMPLETION_SUMMARY.md  PROJECT_INFRASTRUCTURE_AUDIT.md  (+25 more)
.aiculture/: integrated_learning_result.json  last_check.txt  learning_result.json  multi_language_analysis.json  penetration_config.json  performance_benchmarks.json  performance_results.json  response_time_records.json  strictness_history.json
.aiculture/dashboard/: index.html
.gitee/pipelines/: aiculturekit.yml
.githooks/: commit-msg  pre-commit-ai-behavior  pre-push
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  coverage_boost.md  feature_request.md
.github/workflows/: aiculturekit.yml  cd.yml  ci.yml  culture-check.yml  docker-build.yml  docs.yml  quality-gate.yml  quick-check.yml  release.yml  robust-cicd.yml  strict-quality-check.yml
aiculture/: __init__.py  accessibility_culture.py  ai_behavior_enforcer.py  ai_culture_principles.py  ai_intelligent_fixer.py  ai_learning_system.py  ai_test_optimizer.py  alerting_rules.py  auto_problem_fixer.py  auto_setup.py  cache_manager.py  cicd_guardian.py  cli.py  core.py  culture_enforcer.py  culture_penetration_system.py  data_catalog.py  data_governance_culture.py  environment_checker.py  functionality_checker.py  i18n.py  infrastructure_checker.py  monitoring_config.py  multi_language_analyzer.py  observability_culture.py  pattern_learning_integration.py  performance_culture.py  problem_aggregator.py  response_time_monitor.py
aiculture/ai_collaboration/: __init__.py  consistency_checker.py  context_generator.py  quality_reviewer.py  session_manager.py
aiculture/ai_learning/: __init__.py  code_analyzer.py  learning_engine.py  pattern_types.py
aiculture/cli_commands/: __init__.py  ai_commands.py  culture_commands.py  project_commands.py  quality_commands.py  template_commands.py
aiculture/error_handling/: __init__.py  error_handler.py  exceptions.py  logging_system.py  monitoring.py
aiculture/locales/: en.json  zh.json
aiculture/templates/: README.md  cd.yml  ci.yml  env.example  gitignore  pre-commit-config.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
aiculture/templates/python/: README.md  pyproject.toml.template  requirements-dev.txt  requirements.txt
aiculture/templates/python/{{package_name}}/: __init__.py  cli.py  core.py
artifacts/: ci_test_problems.json  ci_test_report.md  diff_coverage_problems.json  diff_coverage_test.json  diff_coverage_test.md  ide_post_fix_problems.json  ide_post_fix_report.md  ide_problems.json  ide_problems_report.md  ide_workflow_summary.md  pre-commit-problems.json  pre-commit-report.md  problems.json  problems_full_report.md  problems_report.md  problems_test.json  problems_test.md  test_problems.json  test_problems_report.md  test_problems_simple.json
artifacts/ai_fixes/: CHANGELOG_ENTRY.md  apply_fixes.sh  lint_001.patch  lint_002.patch
artifacts/ci_test_fixes/: CHANGELOG_ENTRY.md  (+3 more)
demo/: actual-workflow-example.md  ai_first_time_demo.py  comprehensive_culture_demo.py  culture_penetration_demo.py  hardcode_detection_demo.md  hardcode_example.py  hardcode_fixed_example.py  sample.js  sample.ts
deploy/: cloud-deployment.md
docs/: AI_BEHAVIOR_STANDARDS.md  AI_CULTURE_GUIDE.md  API_REFERENCE.md  BEST_PRACTICES_GUIDE.md  CI_ACCEPTANCE.md  CI_SOP.md  DEV_CULTURE.md  TROUBLESHOOTING_DOCKER.md
examples/: error_handling_demo.py
scripts/: add_docstrings.py  add_type_hints.py  aiculturekit_ide.py  architecture_analyzer.py  auto_fix_problems.py  auto_test_generator.py  ci_local.sh  coverage_top_gaps.py  deep_code_analysis.py  dev_bootstrap.sh  documentation_analyzer.py  final_security_cleanup.py  fix_code_quality_issues.py  fix_critical_imports.py  fix_flake8_issues.py  fix_medium_risk_issues.py  fix_security_issues.py  generate_quality_report.py  manage_dependencies.sh  performance_analyzer.py  quality_monitor.py  quick_check.sh  security_scan_p0.sh  setup_automation.sh  setup_culture_penetration.py  setup_hooks.sh  smart_fixer.py  validate_ci_setup.py  verify_ci_post_merge.sh
tests/: __init__.py  _ci_quarantine.txt  conftest.py  test_accessibility_culture.py  test_accessibility_extended.py  test_ai_behavior_comprehensive.py  test_ai_culture_principles.py  test_ai_learning_comprehensive.py  test_ai_learning_system.py  test_auto_setup.py  test_basic_functionality.py  test_basic_imports.py  test_cache_manager.py  test_cicd_guardian.py  test_cli.py  test_cli_smoke.py  test_config_loading.py  test_config_minimal.py  test_core.py  test_core_functionality.py  test_core_modules.py  test_core_simple.py  test_coverage_boost.py  test_culture_enforcer.py  test_culture_enforcer_comprehensive.py  test_data_catalog.py  test_data_governance_comprehensive.py  test_data_governance_culture.py  test_diff_coverage.py  test_environment_checker.py  test_error_paths.py  test_functionality_checker.py  test_infrastructure_checker.py  test_monitoring_config.py  test_multi_language_analyzer.py  test_observability_culture.py  test_pattern_learning_integration.py  test_performance_culture.py  test_problem_aggregator_comprehensive.py  test_simple_coverage.py  (+4 more)
tools/: __init__.py
(+53 files in other folders)
